# FinanceFixer

./: README.md  pyproject.toml
src/data/: financefixer.db  financefixer_test.db
src/financefixer/: app.py  config.py
src/financefixer/application/: loanApplication.py
src/financefixer/data/: base.py  loanRepo.py  schema.py
src/financefixer/domain/models/: loan.py
src/financefixer/domain/services/: loanService.py
src/financefixer/ui/: loanAppPresenter.py  loanAppViewBase.py
src/financefixer/ui/interfaces/: interfaces.py
src/financefixer/ui/pySideUi/: loanAppView.py  loanAppWidget.py
src/financefixer/ui/tkinterUi/: loanAppView.py
src/financefixer/ui/tkinterUi/components/: commonComponents.py  loanAppComponents.py
src/financefixer/utils/: eventBus.py
