[project]
name = "financefixer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pyside6>=6.11.1",
    "python-dateutil>=2.9.0.post0",
    "tkcalendar>=1.6.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
dev = "financefixer.app:run_tkinter"
